# Pelr

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  NOTICE  PLauncher.rc  README.md  Resource.qrc  SECURITY.md  SUPPORT.md  THANBKS.md  index.html  requirements.txt
.gitee/ISSUE_TEMPLATE/: bug.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_en.yml  bug_report_zh.yml  config.yaml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template_en.md  pull_request_template_zh.md
.github/dependabot/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  sync-to-gitee.yml
LAppLive2D/inc/: LAppDefine.hpp  LAppLive2DManager.hpp  LAppModel.hpp
LAppLive2D/src/: LAppDelegate.cpp  LAppModel.cpp  LAppPal.cpp  LAppView.cpp
assets/IconaMoon/: IconaMoon.qrc
assets/style/: flutter.qss  menu.qss  style.qss
assets/text/: CREDITS.md  dailyText.json  text.json  thirdParty.md  timeText.json
docs/: ChangeLog.md  Cpp-工具链.md  FullReleaseLog.md  Home.md  IMPORTANT.md  Pelr.html  Python-工具链.md  README.en.md  README_en.txt  README_sourceforge.txt  app-LibreTranslate.md  app-live2d.md  app-tray.md  app-tts.md  app-txTr.md  app-voicevox.md  app-window.md  dev-dev.md  dev-init.md  dev-structure.md  index.md  make_package.md  pelr.excalidraw  qa-OpenSSL.md  使用方法.md  构建流程.md
docs/assets/: languages.txt
docs/necessaryPartyStructure/: FrameworkShaders.txt  Resources.txt  lib.txt  thirdParty.txt
index/: a.css
public/IconaMoon/: IconaMoon_rc.py
public/style/: menu.qss
scripts/: deploy-d.bat  deploy-r.bat  deploy.py  generate_notice.py  mainWidget2026-03-31.ui  requirements.txt  todoWidget2026-03-31.ui  tts_server.py  tts_server.py.old
scripts/AUCF/: LAppModel.cpp.old  LAppModel.hpp.old  SparkTTS.hpp.old  SparkTTS.py.old  recorder.hpp.old  setting.ui.old  setting.ui.old2
src/: TranslationManager.cpp  TranslationManager.h  icon.rc  main.cpp
src/ai/: llamaclient.cpp  llamaclient.h  ollamaclient.cpp  ollamaclient.h
src/compatLApp/: LAppDefine.cpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppView.cpp  LAppView.hpp
src/compatSDK/Rendering/OpenGL/: CubismRenderTarget_OpenGLES2.hpp  CubismShader_OpenGLES2.hpp
src/core/: GLCore.cpp  GLCore.h  data.cpp  data.hpp  launcher.hpp  tray.cpp  tray.h
src/headers/: BubbleBox.h  CheckApplication.h  DoubleClickableLabel.h  ExtraFileManager.h  ExtraMotionManager.h  GLCore.h  KeyLabel.h  MediaPlayerWidget.h  MenuWidget.h  VersionChecker.h  adjustLabel.hpp  chat.h  chatBoxOnModel.h  convertcodetostring.h  custommenu.h  data.hpp  datetimepickerdialog.h  editor.h  getpowerstatus.h  globalinputlistener.h  keyboardoverlay.h  launcher.hpp  launcherMenu.hpp  logger.hpp  mainWidget.h  manageStart.h  ollamaclient.h  setting.h  todoNotify.hpp  todoWidget.h  tray.h  voicegenerator.hpp  weathermanager.h
src/keyboard/: convertcodetostring.cpp  globalinputlistener.cpp  keyboardoverlay.cpp
src/model/: ExtraFileManager.cpp  ExtraFileManager.h  ExtraMotionManager.cpp  ExtraMotionManager.h
src/sources/: BubbleBox.cpp  CheckApplication.cpp  DoubleClickableLabel.cpp  ExtraFileManager.cpp  ExtraMotionManager.cpp  GLCore.cpp  KeyLabel.cpp  MediaPlayerWidget.cpp  MenuWidget.cpp  NotificationWidget.cpp  TranslationManager.cpp  VersionChecker.cpp  chat.cpp  chatBoxOnModel.cpp  convertcodetostring.cpp  custommenu.cpp  datetimepickerdialog.cpp  editor.cpp  getpowerstatus.cpp  globalinputlistener.cpp  keyboardoverlay.cpp  logger.cpp  main.cpp  mainWidget.cpp  mainWidget.ui  manageStart.cpp  manageStart.ui  ollamaclient.cpp  setting.cpp  setting.ui  todoWidget.cpp  tray.cpp  weathermanager.cpp
src/translation/: TranslationManager.cpp  TranslationManager.h
src/tts/: libretranslateclient.cpp  libretranslateclient.h  pyLang.cpp  pyLang.h  tencenttranslator.cpp  tencenttranslator.h  translator.cpp  translator.h  trmanager.cpp  trmanager.h  voicegenerator.hpp  voicevox_tts.cpp  voicevox_tts.h
src/ui/: BubbleBox.cpp  BubbleBox.h  DoubleClickableLabel.cpp  DoubleClickableLabel.h  MediaPlayerWidget.cpp  MediaPlayerWidget.h  MenuWidget.cpp  MenuWidget.h  NotificationWidget.cpp  NotificationWidget.h  chat.cpp  chat.h  chat.ui  chatBoxOnModel.cpp  chatBoxOnModel.h  custommenu.cpp  custommenu.h  datetimepickerdialog.cpp  datetimepickerdialog.h  editor.cpp  editor.h  editor.ui  launcherMenu.hpp  mainWidget.cpp  mainWidget.h  mainWidget.ui  manageStart.cpp  manageStart.h  manageStart.ui  setting.cpp  setting.h  setting.ui  todoWidget.cpp  todoWidget.h  todoWidget.ui
src/utils/: AudioSpectrumDetector.cpp  AudioSpectrumDetector.h  CheckApplication.cpp  CheckApplication.h  UpdateDialog.cpp  UpdateDialog.h  VersionChecker.cpp  VersionChecker.h  getpowerstatus.cpp  getpowerstatus.h  initFileSys.cpp  initFileSys.h  loadText.h  logger.cpp  logger.hpp  todoNotify.hpp  weathermanager.cpp  weathermanager.h
translations/: language_en_US.ts  language_zh_CN.ts
tts_server/: tts_server.py
tts_server/iFlytek/: Ws_Param.py  server.py
tts_server/openai_edge_tts/: config.py  server.py  tts_handler.py  utils.py
tts_server/translate/: listLanguages.py  returnLanguages.py  translator.py
